# mamoru-core-go

./: Cargo.toml  Makefile  Readme.md  cforgo.yaml  go.mod
.github/workflows/: ci.yml  release.yml
generated_bindings/: cgo_helpers.go  cgo_helpers.h  const.go  doc.go  generated_bindings.go  types.go
packaged/include/: libmamoru_playbook_engine_go.h  libmamoru_query_validator_go.h
packaged/lib/: .gitignore
playbook_engine/: engine.go  engine_test.go  playbook.go  playbook_run.go
query_validator/: query_validator.go
src/: lib.rs
tests/: playbook_engine_test.go  query_validator_test.go
