[package]
name = "mamoru-core-go"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[profile.release]
# optimize for binary size
opt-level = "z"
strip = true
lto = true

[dependencies]
query-validator-c = {git = "https://github.com/Mamoru-Foundation/mamoru-core", rev = "a9c7c743c5b8939487354d824451999ed54924c7"}
playbook-engine-c = {git = "https://github.com/Mamoru-Foundation/mamoru-core", rev = "a9c7c743c5b8939487354d824451999ed54924c7"}

# query-validator-c = {path = "../mamoru-core/query-validator-c"}
# playbook-engine-c = {path = "../mamoru-core/playbook-engine-c"}
