[package]
name = "mamoru-core-go"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[profile.release]
# optimize for binary size
opt-level = "z"
strip = true
lto = true

[dependencies]
query-validator-c = {git = "https://github.com/Mamoru-Foundation/mamoru-core", rev = "782efe411b73f59706344d9cb9fea892879375ce"}
playbook-engine-c = {git = "https://github.com/Mamoru-Foundation/mamoru-core", rev = "782efe411b73f59706344d9cb9fea892879375ce"}

#query-validator-c = {path = "../mamoru-core/query-validator-c"}
#playbook-engine-c = {path = "../mamoru-core/playbook-engine-c"}
